# Dumpectorist

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
app/: __init__.py  main.py  worker.py
docs/: .audit_marker  ADAPTERS.md  ASSEMBLY.md  AUDIT_2026-07-07.md  AUDIT_NOTES.md  AUDIT_STATUS.md  BACKTEST.md  BENCHMARKS.md  CHECKS.md  CONSENSUS.md  DASHBOARD.md  DELIVERY_ROADMAP.md  DISCOVERY.md  EXECUTION_LIQUIDITY.md  FLOW.md  HTF_STRUCTURE.md  LBANK.md  LIFECYCLE.md  NOTIFICATIONS.md  OHLCV.md  OPS.md  PERSISTENCE.md  PROJECT_GOVERNANCE.md  PROJECT_MASTER_PLAN.md  PROJECT_NAME.md  RECLAIM_PULLBACK_ENGINE.md  RECLAIM_RUNTIME.md  RUNTIME.md  SETUPS.md  SPRINTS.md  STRUCTURE.md  TESTING_POLICY.md  WATCHLIST.md
migrations/: env.py
research/: CI_RUN_2026-07-21.md  FINAL_RUN_2_MARKER_2026-07-21.md  FINAL_RUN_MARKER_2026-07-21.md  __init__.py  backtest_90d.py
tests/: conftest.py  reclaim_fixtures.py  test_adapters_models.py  test_adapters_parsers.py  test_audit_hardening.py  test_backtest.py  test_backtest_validation.py  test_benchmark_health.py  test_binance_benchmark.py  test_bybit_kline.py  test_candle_repository.py  test_candles.py  test_checks_runner.py  test_coingecko_adapter.py  test_config.py  test_consensus.py  test_dashboard_route.py  test_database_overview_provider.py  test_db_repository.py  test_dex_screener_adapter.py  test_execution_gate_service.py  test_execution_reality.py  test_flow_runner.py  test_health.py  test_htf_structure_engine.py  test_lbank_adapter.py  (+37 more)
(+131 files in other folders)
